--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sockets_demo",
+  "name": "JackChat",
   "version": "0.0.1",
   "description": "",
   "main": "server.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Jack Brounstein",
+  "author": "Joshua Parsels",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.16.1",
